fixed product image size, only active categories visible

--- a/app/assets/stylesheets/ecommerce/organici/custom.scss
+++ b/app/assets/stylesheets/ecommerce/organici/custom.scss
@@ -179,7 +179,8 @@
 }
 
 .max-height-400 {
-  max-height: 400;
+  max-width: 320;
+	height: 320;
 }
 
 .max-height-800 {
